# esp32-spooky-maze-game

./: .gitignore  .gitpod.Dockerfile  Build-Test.ps1  Cargo.toml  Disabled-Workspace.Cargo.toml  LICENSE  README.md  esp-launchpad.toml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
desktop/: Cargo.toml
desktop/src/: components.rs  desktop_movement_controller.rs  keyboard_movement_controller.rs  main.rs  maze.rs  resources.rs
desktop/src/desktop_systems/: hud.rs  mod.rs  player_input.rs
desktop/src/systems/: mod.rs  player_input.rs  setup.rs
esp-wrover-kit/: Cargo.toml  diagram.json  wokwi.toml
esp-wrover-kit/.cargo/: config.toml
esp-wrover-kit/src/: app.rs  button_keyboard.rs  button_movement_controller.rs  embedded_movement_controller.rs  main.rs  setup.rs  types.rs  wrover_keyboard.rs
esp32/: Cargo.toml  skip-wokwi-test.toml  wokwi.toml
esp32-c3/: Cargo.toml  build.rs  rust-toolchain.toml  wokwi.toml
esp32-c3-devkit-rust/: Cargo.toml  diagram.json  wokwi.toml
esp32-c3-devkit-rust/.cargo/: config.toml
esp32-c3-devkit-rust/src/: app.rs  constants.rs  main.rs  setup.rs  types.rs
esp32-c3-lcdkit/: Cargo.toml  diagram.json  wokwi.toml
esp32-c3/.cargo/: config.toml
esp32-c3/src/: main.rs
esp32-c6/: Cargo.toml  build.rs  rust-toolchain.toml  wokwi.toml
esp32-c6-devkit/: Cargo.toml  diagram.json
esp32-c6-devkit/.cargo/: config.toml
esp32-c6-devkit/src/: app.rs  devkitc6_composite_controller.rs  ladder_movement_controller.rs  main.rs  setup.rs  types.rs
esp32-c6/.cargo/: config.toml
esp32-c6/src/: main.rs
esp32-s2/: Cargo.toml  wokwi.toml
esp32-s2-kaluga/: Cargo.toml  diagram.json
esp32-s2-kaluga/.cargo/: config.toml
esp32-s2-kaluga/src/: app.rs  kaluga_composite_controller.rs  ladder_movement_controller.rs  main.rs  setup.rs  types.rs
esp32-s2-usb-otg/: Cargo.toml  diagram.json  rust-toolchain.toml  wokwi.toml
esp32-s2-usb-otg/.cargo/: config.toml
esp32-s2-usb-otg/src/: main.rs
esp32-s3/: Cargo.toml  wokwi.toml
esp32-s3-box/: Cargo.toml  build.rs  diagram.json  wokwi.toml
esp32-s3-box-3/: Cargo.toml  diagram.json
esp32-s3-box-3/src/: gt911.rs  main.rs
esp32-s3-box-lite/: Cargo.toml  diagram.json  wokwi.toml
esp32-s3-box/.cargo/: config.toml
esp32-s3-box/src/: accel_movement_controller.rs  app.rs  main.rs  s3box_composite_controller.rs  setup.rs  spi_dma_displayinterface.rs  spritebuf.rs  tiny_mqtt.rs  types.rs
esp32-s3-lcd-ev-board/components/spooky_idf/: CMakeLists.txt  spooky_idf.c
esp32-s3-lcd-ev-board/components/spooky_idf/include/: spooky_idf.h
esp32-s3-lcd-ev-board/components/spooky_idf/spooky_idf_rs/: Cargo.toml
esp32-s3-lcd-ev-board/components/spooky_idf/spooky_idf_rs/src/: lib.rs
esp32-s3-lcd-ev-board/main/: CMakeLists.txt  main.c
esp32-s3-usb-otg/: Cargo.toml  diagram.json  rust-toolchain.toml  wokwi.toml
esp32-s3-usb-otg/.cargo/: config.toml
esp32-s3-usb-otg/src/: main.rs
esp32-s3/src/: heapbuffer.rs  main.rs
esp32-s3/src/embedded_systems/: player_input.rs  render.rs
esp32/.cargo/: config.toml
esp32/src/: main.rs
m5core-fire/: Cargo.toml  run-wokwi.sh  wokwi.toml
m5core-fire/.cargo/: config.toml
m5core-fire/src/: main.rs
m5stack-core2/: Cargo.toml  diagram.json  wokwi.toml
m5stack-core2/.cargo/: config.toml
m5stack-core2/src/: accel_device.rs  accel_movement_controller.rs  app.rs  axp192.rs  m5stack_composite_controller.rs  main.rs  setup.rs  types.rs
m5stack-cores3/: Cargo.toml  rust-toolchain.toml  wokwi.toml
m5stack-cores3/.cargo/: config.toml
m5stack-cores3/src/: app.rs  m5stack_composite_controller.rs  main.rs
m5stack-fire/: Cargo.toml  diagram.json  wokwi.toml
m5stack-fire/.cargo/: config.toml
m5stack-fire/src/: main.rs
spi-dma-displayinterface/: Cargo.toml
spi-dma-displayinterface/src/: lib.rs  spi_dma_displayinterface.rs
spooky-core/: Cargo.toml
spooky-core/src/: assets.rs  camera.rs  components.rs  demo_movement_controller.rs  engine.rs  lib.rs  maze.rs  movement_controller.rs  nomovement_controller.rs  resources.rs  sprite_buf.rs  spritebuf.rs  static_maze_data.rs  transform.rs  universe.rs
spooky-core/src/events/: coin.rs  dynamite.rs  mod.rs  npc.rs  player.rs  walker.rs
spooky-core/src/systems/: coin_collision.rs  dynamite_logic.rs  game_logic.rs  hud.rs  mod.rs  npc_logic.rs  player_input.rs  process_player_input.rs  setup.rs  teleport.rs
spooky-core/src/systems/collisions/: coin.rs  dynamite.rs  mod.rs  npc.rs  walker.rs
spooky-embedded/: Cargo.toml
spooky-embedded/src/: app.rs  button_keyboard.rs  button_movement_controller.rs  embedded_display.rs  embedded_movement_controller.rs  lib.rs
spooky-embedded/src/controllers/: accel.rs  button.rs  embedded.rs  ladder.rs
spooky-embedded/src/controllers/composites/: accel_composite.rs  kaluga.rs  ladder_composite.rs  s3box.rs
spooky-maze-desktop/: Cargo.toml
spooky-maze-desktop/src/desktop_systems/: hud.rs  player_input.rs
spooky-maze-esp32-s3-box-3/: Cargo.toml  build.rs  partitions.csv
spooky-maze-esp32-s3-box-3/.cargo/: config.toml
spooky-maze-esp32-s3-box-3/src/: heapbuffer.rs  main.rs
spooky-maze-esp32-s3-box-3/src/embedded_systems/: player_input.rs  render.rs
spooky-maze-m5stack-atom-s3/: Cargo.toml
spooky-maze-m5stack-atom-s3/.cargo/: config.toml
spooky-maze-m5stack-atom-s3/src/: main.rs
spooky-maze-m5stack-atom-s3/src/embedded_systems/: mod.rs  player_input.rs
spooky-maze-m5stack-core2/: Cargo.toml  build.rs  partitions.csv
spooky-maze-m5stack-core2/.cargo/: config.toml
spooky-maze-m5stack-core2/src/: main.rs
spooky-maze-m5stack-core2/src/embedded_systems/: player_input.rs
spooky-maze-m5stack-cores3/: Cargo.toml
spooky-maze-m5stack-cores3/src/: heapbuffer.rs  main.rs
spooky-maze-m5stack-cores3/src/embedded_systems/: player_input.rs
spooky-maze-wasm/: Cargo.toml  README.md  build.sh  index.html
spooky-maze-wasm/src/: lib.rs  wasm_input.rs
src/: main.rs  (+1 more)
wasm/: Cargo.toml  README.md  index.html  index.js  manifest.json  package.json  service-worker.js
wasm/src/: assets.rs  lib.rs  maze.rs
(+49 files in other folders)
