[workspace]

# Set explicit resolver to "2" to avoid problems with std/no_std projects.
resolver = "2"

members = [
    "desktop",
    "m5core-fire",
    "esp32-s2-usb-otg",
    "esp32-s3-usb-otg",
    "esp32-s3-box",
    "spooky-core",
    "wasm"
]


[patch.crates-io]
# xtensa-lx-rt = { path = "/Users/mabez/Development/rust/embedded/util/xtensa-lx-rt" }
xtensa-lx-rt = { package = "xtensa-lx-rt", git = "https://github.com/esp-rs/xtensa-lx-rt", branch = "temp/quick-fix-loop" }