[package]
name = "spooky-desktop"
version = "0.11.0"
authors = ["Juraj Michalek <juraj.michalek@espressif.com>", "Samuel Benko <samuel.benko@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
getrandom = { version = "0.2.8", features = ["js"] }
spooky-core = { path = "../spooky-core" }
embedded-graphics-simulator = "0.7.0"
