[package]
name = "spooky-wrover-kit"
version = "0.1.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
hal = { package = "esp32-hal", version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.15.0", features = ["esp32"], optional = true }
esp-println = { version = "0.5.0", features = ["esp32"] }

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = { version = "0.7", git = "https://github.com/georgik/mipidsi.git", branch = "bugfix/ili-init" }
panic-halt = "0.2"
shared-bus = { version = "0.2.4" }
spooky-core = { path = "../spooky-core", default-features = false, features = [
    "static_maze",
] }
heapless = { version = "0.7.14", default-features = false }

[features]
default = [ "esp_wrover_kit" ]

system_timer = []

button_controls = []
imu_controls = []

esp32 = []
esp32s2 = ["system_timer"]
esp32s3 = []
esp32c3 = ["system_timer"]

# Enable this feature in case you have an ESP32 Wrover Kit with ILI9341
esp_wrover_kit = [ "xtensa-lx-rt", "esp32" ]
