[package]
name = "spooky-wrover-kit"
version = "0.10.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32-none-elf.dependencies]
hal = { package = "esp32-hal", version = "0.17.0", features = ["psram-8m"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32"] }

[dependencies]
esp-alloc = "0.3.0"
embedded-graphics = "0.8.0"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core", default-features = false, features = [ "static_maze" ] }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "esp32", "static_maze", "resolution_320x240" ] }
spi-dma-displayinterface = { path = "../spi-dma-displayinterface", features = [ "esp32" ] }
