[package]
name = "spooky-esp32-c3"
version = "0.10.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.riscv32imc-unknown-none-elf.dependencies]
hal = { package = "esp32c3-hal", version = "0.14.0" }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", default-features = false, features = [ "esp32c3", "log" ] }

[dependencies]
esp-alloc = "0.3.0"
embedded-graphics = "0.8.0"
embedded-hal = "0.2"
icm42670 = { git = "https://github.com/jessebraham/icm42670/" }
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core", default-features = false, features = ["static_maze"]}
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "esp32c3", "static_maze", "resolution_320x240" ] }
spi-dma-displayinterface = { path = "../spi-dma-displayinterface", features = ["esp32c3"] }
