[package]
name = "spooky_esp32c6"
version = "0.1.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.riscv32imac-unknown-none-elf.dependencies]
esp32c6-hal = "0.1.0"
esp-backtrace = { version = "0.6.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.4.0", features = [ "esp32c3" ] }

[dependencies]
esp-alloc = "0.2.0"
embedded-graphics = "0.7"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
icm42670 = { git = "https://github.com/jessebraham/icm42670/" }
mipidsi = { git = "https://github.com/almindor/mipidsi.git" }
panic-halt = "0.2"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
petgraph = { git = "https://github.com/zendurix/petgraph.git", branch = "better_no_std", default-features = false, features = [
    "graphmap",
] }
shared-bus = { version = "0.2.4" }
spooky-core = { path = "../spooky-core", default-features = false, features = [ "static_maze"]}
heapless = { version = "0.7.14", default-features = false }
embedded-graphics-framebuf = "0.2.0"

[features]
default = [ "esp32c6_ili9341" ]
system_timer = []


button_controls = []
imu_controls = []

esp32c6 = ["system_timer"]

esp32c6_ili9341 = [ "esp32c6", "esp32c6-hal/eh1" ]
