[package]
name = "spooky-esp32-c6"
version = "0.11.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.riscv32imac-unknown-none-elf.dependencies]
hal = { package = "esp32c6-hal", version = "0.8.0" }
esp-backtrace = { version = "0.10.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = [ "esp32c6", "log" ] }

[dependencies]
esp-alloc = "0.3.0"
embedded-graphics = "0.8.1"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
log = { version = "0.4.18" }
mipidsi = "0.7.1"
panic-halt = "0.2"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
petgraph = { git = "https://github.com/zendurix/petgraph.git", branch = "better_no_std", default-features = false, features = [
    "graphmap",
] }
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core", default-features = false, features = [ "static_maze"]}
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "esp32c6", "static_maze", "resolution_320x240" ] }
spi-dma-displayinterface = { path = "../spi-dma-displayinterface", features = [ "esp32c6" ] }
esp-bsp = "0.1.0"
