[package]
name = "spooky-esp32-c6"
version = "0.11.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.22.0", features = [
    "esp32c6",
] }
esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
log = { version = "0.4.21" }
critical-section = "1.2.0"

esp-alloc = "0.5.0"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
mipidsi = "0.8.0"
spooky-core = { path = "../spooky-core", default-features = false, features = [ "static_maze"] }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "static_maze", "resolution_320x240" ] }
esp-display-interface-spi-dma = "0.2.0"
esp-bsp = { path = "../../esp-bsp-rs" }

[features]
default = [  ]

esp32-c6-devkitc-1 = [ "esp-bsp/esp32-c6-devkitc-1"]
waveshare-esp32-c6-lcd-1-47 = [ "esp-bsp/waveshare-esp32-c6-lcd-1-47" ]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
