[package]
name = "spooky-s3-box"
version = "0.10.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
hal = { package = "esp32s3-hal", version = "0.14.0" , features = ["opsram-8m"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32s3"] }

[dependencies]
esp-alloc = "0.3.0"
embedded-graphics = "0.8.0"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
icm42670 = { version = "0.1.1" }
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core" }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "esp32s3", "dynamic_maze", "resolution_320x240" ] }
spi-dma-displayinterface = { path = "../spi-dma-displayinterface", features = [ "esp32s3" ] }
