[package]
name = "spooky-s3-box"
version = "0.10.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"


[dependencies]
#xtensa-atomic-emulation-trap = "0.4.0"
esp-hal = { version = "0.22.0", features = [ "esp32s3", "octal-psram" ] }
#hal = { package = "esp32s3-hal", version = "0.15.1", features = [] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "panic-handler",
    "println"
] }
esp-println = { version = "0.12.0", features = ["esp32s3"] }

esp-alloc = "0.5.0"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
icm42670 = { version = "0.2.0" }
mipidsi = "0.8.0"
panic-halt = "1.0.0"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core" }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "dynamic_maze", "resolution_320x240" ] }
esp-display-interface-spi-dma = { path = "../../esp-display-interface-spi-dma" }
#ili9431_esp32s3_test = {  path = "../../rust-esp32s3-ili9341" }
byte-slice-cast = { version = "1.2.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
