[package]
name = "spooky-s3-box"
version = "0.11.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "0.22.0", features = [ "esp32s3", "octal-psram" ] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "panic-handler",
    "println"
] }
esp-println = { version = "0.12.0", features = ["esp32s3"] }

esp-alloc = "0.5.0"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
icm42670 = { version = "0.2.0" }
mipidsi = "0.8.0"
spooky-core = { path = "../spooky-core" }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "dynamic_maze", "resolution_320x240" ] }
esp-display-interface-spi-dma = "0.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
