[package]
name = "spooky-s3-otg"
version = "0.1.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
esp32s3-hal = "0.5.0"
esp-backtrace = { version = "0.5.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.15.0", features = ["esp32s3"], optional = true }
esp-println = { version = "0.3.1", features = [ "esp32s3" ] }


[dependencies]
esp-alloc = "0.1.0"
embedded-graphics = "0.7"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = "0.6.0"
panic-halt = "0.2"
shared-bus = { version = "0.2.4" }
spooky-core = { path = "../spooky-core" }
heapless = { version = "0.7.14", default-features = false }
embedded-graphics-framebuf = "0.2.0"

[features]
default = ["rt", "esp32s3_usb_otg"]
rt = ["xtensa-lx-rt"]

system_timer = []

button_controls = []
imu_controls = []

esp32 = []
esp32s2 = [ "system_timer" ]
esp32s3 = [ ]
esp32c3 = [ "system_timer" ]

# Enable this feature in case you have an ESP32-S3-USB-OTG board with ST7789
esp32s3_usb_otg = [ "xtensa-lx-rt", "esp32s3", "esp32s3-hal/eh1", "button_controls" ]
