[package]
name = "spooky-s3-usb-otg"
version = "0.7.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
hal = { package = "esp32s3-hal", version = "0.13.0" }
esp-backtrace = { version = "0.9.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.16.0", features = ["esp32s3"], optional = true }
esp-println = { version = "0.7.0", features = [ "esp32s3" ] }


[dependencies]
esp-alloc = "0.3.0"
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core" }
# spi-dma-displayinterface ={ path = "../spi-dma-displayinterface" }

[features]
default = ["esp32s3_usb_otg"]
button_controls = []
imu_controls = []
esp32s3 = [ ]

# Enable this feature in case you have an ESP32-S3-USB-OTG board with ST7789
esp32s3_usb_otg = [ "esp32s3", "button_controls" ]
