[package]
name = "spooky-esp32-s3"
version = "0.11.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = "0.22.0"
esp-backtrace = { version = "0.14.2", features = [
    "panic-handler",
    "println"
] }
esp-println =  "0.12.0"

esp-alloc = "0.5.0"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
icm42670 = { version = "0.2.0" }
mipidsi = "0.8.0"
spooky-core = { path = "../spooky-core" }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "dynamic_maze", "resolution_320x240" ] }
esp-display-interface-spi-dma = "0.2.0"
esp-bsp = { path = "../../esp-bsp-rs" }

[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3" ]

esp32-s3-box = [ "esp-bsp/esp32-s3-box", "esp-hal/octal-psram", "spooky-embedded/resolution_320x240" ]
esp32-s3-box-3 = [ "esp-bsp/esp32-s3-box-3", "esp-hal/octal-psram", "spooky-embedded/resolution_320x240" ]
esp32-s3-usb-otg = [ "esp-bsp/esp32-s3-usb-otg", "esp-hal/quad-psram", "spooky-embedded/resolution_320x240" ]
m5stack-cores3 = [ "esp-bsp/m5stack-cores3", "esp-hal/quad-psram", "spooky-embedded/resolution_320x240" ]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
